Closed
Bug 526282
Opened 16 years ago
Closed 16 years ago
[10.6] Minimize button disabled after full screen mode
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
VERIFIED
FIXED
mozilla1.9.3a1
| Tracking | Status | |
|---|---|---|
| status1.9.2 | --- | .5-fixed |
People
(Reporter: kenshin, Assigned: mstange)
References
Details
(Whiteboard: [in-litmus-bug-week])
Attachments
(1 file)
|
811 bytes,
patch
|
jaas
:
review+
christian
:
approval1.9.2.5+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.6; en-US; rv:1.9.2b1) Gecko/20091029 Firefox/3.6b1
Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.6; en-US; rv:1.9.2b1) Gecko/20091029 Firefox/3.6b1
After full-screen mode is enabled, and then exited, the yellow Minimize button on the Firefox window is grayed-out. It works again after Firefox is restarted.
Reproducible: Always
Steps to Reproduce:
1. Enter full-screen mode.
2. Exit full-screen mode.
Actual Results:
Minimize button grayed-out.
Expected Results:
Minimize button should be enabled.
| Assignee | ||
Comment 1•16 years ago
|
||
This doesn't happen on 10.5.
Assignee: nobody → mstange
Status: UNCONFIRMED → ASSIGNED
Component: General → Widget: Cocoa
Ever confirmed: true
Product: Firefox → Core
QA Contact: general → cocoa
Hardware: x86 → All
Summary: Minimize Button Disabled After Full-Screen Mode → [10.6] Minimize button disabled after full screen mode
Version: unspecified → Trunk
Comment 2•16 years ago
|
||
We can add one more item to check into the existing litmus test.
Flags: in-litmus?
Updated•16 years ago
|
Flags: blocking1.9.2?
Comment 3•16 years ago
|
||
It hurts me to say it, but this probably shouldn't block the release. I'd really like it fixed though. :)
Whiteboard: [should not block]
Agreed, this shouldn't block but we should probably take a patch if we have one.
Flags: wanted1.9.2+
Flags: blocking1.9.2?
Flags: blocking1.9.2-
| Assignee | ||
Comment 7•16 years ago
|
||
Attachment #420970 -
Flags: review?(joshmoz)
Comment on attachment 420970 [details] [diff] [review]
v1
Maybe add a comment explaining the importance of the ordering here?
Attachment #420970 -
Flags: review?(joshmoz) → review+
| Assignee | ||
Comment 10•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
Comment 11•16 years ago
|
||
I am still seeing this bug in the final release of Firefox 3.6.
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.6; en-US; rv:1.9.2) Gecko/20100115 Firefox/3.6
Comment 12•16 years ago
|
||
This has never been fixed on 1.9.2. We can ask for a back port because it's a very simple patch.
Verified fixed with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.6; en-US; rv:1.9.3a1pre) Gecko/20100121 Minefield/3.7a1pre
Status: RESOLVED → VERIFIED
status1.9.2:
--- → ?
| Assignee | ||
Updated•16 years ago
|
Attachment #420970 -
Flags: approval1.9.2.1?
Comment 20•16 years ago
|
||
Comment on attachment 420970 [details] [diff] [review]
v1
Didn't make 1.9.2.2, moving flag forward.
Attachment #420970 -
Flags: approval1.9.2.2? → approval1.9.2.3?
Comment 22•16 years ago
|
||
Comment on attachment 420970 [details] [diff] [review]
v1
a=LegNeato for 1.9.2.5. Please ONLY land this on mozilla-1.9.2 default, as we
are still working on 1.9.2.4 on the relbranch
Attachment #420970 -
Flags: approval1.9.2.4? → approval1.9.2.5+
| Assignee | ||
Comment 23•16 years ago
|
||
Comment 25•15 years ago
|
||
https://litmus.mozilla.org/show_test.cgi?id=12879 added to Litmus.
Flags: in-litmus? → in-litmus+
Updated•15 years ago
|
Whiteboard: [should not block] → [in-litmus-bug-week]
You need to log in
before you can comment on or make changes to this bug.
Description
•