Bug 526282 - Minimize button disabled after full screen mode on Mac OS 10.6. r=josh